--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
 <h1> dean funes </h1>
 <p> ...estamos trabajando para usted</p>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reproductor de Música</title>
+</head>
+<body>
+    <h2>Reproductor de Música</h2>
+    <audio controls>
+        <source src="cancion.mp3" type="audio/mpeg">
+        Tu navegador no soporta el audio HTML5.
+    </audio>
+</body>
+</html>
