--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reproductor de Música</title>
+    <title>&#590;</title>
 </head>
 <body>
-    <h2>Reproductor de Música</h2>
+    <h2>&#590;</h2>
     <audio controls>
         <source src="cancion.mp3" type="audio/mpeg">
         Tu navegador no soporta el audio HTML5.
