--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h2>&#590;</h2>
     <audio controls>
-        <source src="cancion.mp3" type="audio/mpeg">
+        <source src="cancion.ogg" type="audio/mpeg">
         Tu navegador no soporta el audio HTML5.
     </audio>
 </body>
