--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
-<h1> dean funes </h1>
-<p> ...estamos trabajando para usted</p>
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>&#590;</title>
+    <style>
+        body {
+            background: linear-gradient(to right, #8403fc, #00414f);
+            color: white; /* Hace el texto más legible */
+            text-align: center; /* Centra los elementos */
+            font-family: Arial, sans-serif;
+        }
+        h1, h2 {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
+    <h1>Dean Funes</h1>
+    <p>...estamos trabajando para usted</p>
+    
     <h2>&#590;</h2>
     <audio controls>
         <source src="cancion.ogg" type="audio/mpeg">
