--- a/index.html
+++ b/index.html
@@ -12,40 +12,14 @@
         }
 
         body {
+            background: white; /* Fondo blanco */
             color: black; /* Letras en negro */
             text-align: left; /* Texto alineado a la izquierda */
             font-family: Arial, sans-serif;
             padding: 20px;
-            overflow: hidden; /* Evita scroll */
-
-            /* Fondo con degradado grande */
-            background: linear-gradient(45deg, #8403fc, #00414f, #8403fc);
-            background-size: 400% 400%;
-            animation: moveGradient 12s infinite alternate ease-in-out;
-        }
-
-        /* Animación del gradiente para un movimiento más fluido */
-        @keyframes moveGradient {
-            0% { background-position: 0% 0%; }
-            100% { background-position: 100% 100%; }
-        }
-
-        /* Efecto pixelado extra con un pseudo-elemento */
-        body::after {
-            content: "";
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
-            background-image: url('https://www.transparenttextures.com/patterns/dark-mosaic.png');
-            opacity: 0.1; /* Controla la intensidad del efecto pixelado */
-            z-index: -1;
         }
 
         h1, h2, p, audio {
-            position: relative;
-            z-index: 1; /* Asegura que el texto esté sobre el fondo */
             margin-bottom: 10px;
         }
     </style>
