--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </style>
 </head>
 <body>
-    <h1>Dean Funes</h1>
-    <p>...estamos trabajando para usted</p>
+    <h1>---------------</h1>
+    <p>...somos dean funes y hacemos musica</p>
     
-    <h2>&#590;</h2>
+    <h2>demo &#590 demo;</h2>
     <audio controls>
         <source src="cancion.ogg" type="audio/mpeg">
         Tu navegador no soporta el audio HTML5.
