--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h1>---------------</h1>
     <p>...somos dean funes y hacemos musica</p>
     
-    <h2>demo &#590 demo;</h2>
+    <h2>demo &fnof;</h2>
     <audio controls>
         <source src="cancion.ogg" type="audio/mpeg">
         Tu navegador no soporta el audio HTML5.
