--- a/index.html
+++ b/index.html
@@ -19,14 +19,24 @@
             padding: 20px;
         }
 
-        h1, h2, p, audio {
+        h1, h2, p, audio, img {
             margin-bottom: 10px;
+        }
+
+        .imagen {
+            width: 100%; /* Ajusta el tamaño al ancho disponible */
+            max-width: 500px; /* Limita el tamaño */
+            display: block;
+            margin: 10px 0; /* Espacio entre la imagen y los textos */
         }
     </style>
 </head>
 <body>
     <h1>---------------</h1>
-    <p>...somos dean funes y hacemos musica</p>
+    <p>...somos dean funes y hacemos música</p>
+    
+    <!-- Imagen agregada aquí -->
+    <img src="Logo.jpg" alt="Descripción de la imagen" class="imagen">
     
     <h2>demo &fnof;</h2>
     <audio controls>
