--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <p>...somos dean funes y hacemos música</p>
     
     <!-- Imagen agregada aquí -->
-    <img src="Logo.jpg" alt="Descripción de la imagen" class="imagen">
+    <img src="https://github.com/Wndr09/deanfunes.github.io/blob/main/Logo%20glitch.gif" alt="Animación" class="imagen">
     
     <h2>demo &fnof;</h2>
     <audio controls>
