--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <p>...somos dean funes y hacemos música</p>
     
     <!-- Imagen agregada aquí -->
-    <img src="https://github.com/Wndr09/deanfunes.github.io/blob/db9017abfb43ea2baa263c5f5fc86c42d8a79d27/Logo%20glitch.gif" alt="Animación" class="imagen">
+  <img src="https://raw.githubusercontent.com/Wndr09/deanfunes.github.io/main/Logo%20glitch.gif" alt="Animación" class="imagen">
+
     
     <h2>demo &fnof;</h2>
     <audio controls>
