--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
     <p>...somos dean funes y hacemos música</p>
     
     <!-- Imagen agregada aquí -->
-  <img src="https://raw.githubusercontent.com/Wndr09/deanfunes.github.io/main/Logo%20glitch.gif" alt="Animación" class="imagen">
-
+    <img src="Logo glitch.gif" alt="Descripción de la imagen" class="imagen">
     
     <h2>demo &fnof;</h2>
     <audio controls>
