--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
     </style>
 </head>
 <body>
-    <h1>---------------</h1>
+    <h1>d&fnof;</h1>
     <p>...somos dean funes y hacemos música</p>
+    
     
     <!-- Imagen agregada aquí -->
     <img src="Logo glitch.gif" alt="Descripción de la imagen" class="imagen">
