--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <h1>d&fnof;</h1>
-    <p>...somos dean funes y hacemos música</p>
+    <p>...somos dean &fnof;unes y hacemos música</p>
     
     
     <!-- Imagen agregada aquí -->
