--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>&fnof; &fnof; &fnof;</title>
+
     <style>
         * {
             margin: 0;
@@ -12,8 +13,8 @@
         }
 
         body {
-            background: white; /* Fondo blanco */
-            color: black; /* Letras en negro */
+            background: black; /* Fondo negro */
+            color: white; /* Letras en blanco */
             text-align: left; /* Texto alineado a la izquierda */
             font-family: Arial, sans-serif;
             padding: 20px;
@@ -33,8 +34,7 @@
 </head>
 <body>
     <h1>d&fnof;</h1>
-    <p>...somos dean &fnof;unes y hacemos música</p>
-    
+    <p>...somos dean funes y hacemos música</p>
     
     <!-- Imagen agregada aquí -->
     <img src="Logo glitch.gif" alt="Descripción de la imagen" class="imagen">
