--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         }
 
         body {
-            background: black; /* Fondo negro */
+            background: url('extended_image.png') repeat; /* Imagen de fondo en mosaico */
+            background-size: cover; /* Ajustar el tamaño para que cubra toda la pantalla */
             color: white; /* Letras en blanco */
             text-align: left; /* Texto alineado a la izquierda */
             font-family: Arial, sans-serif;
