--- a/index.html
+++ b/index.html
@@ -13,12 +13,34 @@
         }
 
         body {
-            background: url('extended_image.png') repeat; /* Imagen de fondo en mosaico */
-            background-size: cover; /* Ajustar el tamaño para que cubra toda la pantalla */
-            color: white; /* Letras en blanco */
-            text-align: left; /* Texto alineado a la izquierda */
+            background: black;
+            color: white;
+            text-align: left;
             font-family: Arial, sans-serif;
             padding: 20px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        /* Fondo con ruido */
+        body::before {
+            content: "";
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100 100"><filter id="noise"><feTurbulence type="fractalNoise" baseFrequency="0.8" numOctaves="3" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(#noise)"/></svg>');
+            opacity: 0.1;
+            z-index: -1;
+            animation: glitch-bg 0.5s infinite alternate;
+        }
+
+        /* Efecto glitch animado */
+        @keyframes glitch-bg {
+            0% { transform: translateX(0); }
+            50% { transform: translateX(1px); }
+            100% { transform: translateX(-1px); }
         }
 
         h1, h2, p, audio, img {
@@ -26,10 +48,10 @@
         }
 
         .imagen {
-            width: 100%; /* Ajusta el tamaño al ancho disponible */
-            max-width: 500px; /* Limita el tamaño */
+            width: 100%;
+            max-width: 500px;
             display: block;
-            margin: 10px 0; /* Espacio entre la imagen y los textos */
+            margin: 10px 0;
         }
     </style>
 </head>
@@ -37,7 +59,6 @@
     <h1>d&fnof;</h1>
     <p>...somos dean funes y hacemos música</p>
     
-    <!-- Imagen agregada aquí -->
     <img src="Logo glitch.gif" alt="Descripción de la imagen" class="imagen">
     
     <h2>demo &fnof;</h2>
