--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
     
     <img src="Logo glitch.gif" alt="Descripción de la imagen" class="imagen">
     
-    <h2>demo &fnof;</h2>
+    <h2>demos &fnof;</h2>
     <audio controls>
+        <source src="demofunes.ogg" type="audio/mpeg">
         <source src="Escuchar.ogg" type="audio/mpeg">
         Tu navegador no soporta el audio HTML5.
     </audio>
