--- a/index.html
+++ b/index.html
@@ -61,11 +61,16 @@
     
     <img src="Logo glitch.gif" alt="Descripción de la imagen" class="imagen">
     
-    <h2>demos &fnof;</h2>
-    <audio controls>
-        <source src="demofunes.ogg" type="audio/mpeg">
-        <source src="Escuchar.ogg" type="audio/mpeg">
-        Tu navegador no soporta el audio HTML5.
-    </audio>
+  <h2>demos ƒ</h2>
+
+<audio controls>
+    <source src="demofunes.ogg" type="audio/ogg">
+    Tu navegador no soporta el audio HTML5.
+</audio>
+
+<audio controls>
+    <source src="Escuchar.ogg" type="audio/ogg">
+    Tu navegador no soporta el audio HTML5.
+</audio>
 </body>
 </html>
