--- a/index.html
+++ b/index.html
@@ -72,5 +72,19 @@
     <source src="Escuchar.ogg" type="audio/ogg">
     Tu navegador no soporta el audio HTML5.
 </audio>
+<script>
+    // Obtener todos los elementos <audio>
+    const audios = document.querySelectorAll("audio");
+
+    audios.forEach(audio => {
+        audio.addEventListener("play", () => {
+            audios.forEach(otherAudio => {
+                if (otherAudio !== audio) {
+                    otherAudio.pause();
+                }
+            });
+        });
+    });
+</script>
 </body>
 </html>
