--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <h2>demo ƒ</h2>
 
 <audio controls>
-    <source src="satiro con tek.mp3" type="audio/ogg">
+    <source src="satiro con tek.ogg" type="audio/ogg">
     Tu navegador no soporta el audio HTML5.
 </audio>
 
