--- a/index.html
+++ b/index.html
@@ -1,97 +1,108 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>&fnof; &fnof; &fnof;</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>&fnof; &fnof; &fnof;</title>
 
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        body {
-            background: black;
-            color: white;
-            text-align: left;
-            font-family: monospace, Courier, sans-serif;
-            padding: 20px;
-            position: relative;
-            overflow: hidden;
-        }
+    body {
+      background: black;
+      color: white;
+      text-align: left;
+      font-family: monospace, Courier, sans-serif;
+      padding: 20px;
+      position: relative;
+      overflow: hidden;
+    }
 
-        /* Fondo con ruido */
-        body::before {
-            content: "";
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100 100"><filter id="noise"><feTurbulence type="fractalNoise" baseFrequency="0.8" numOctaves="3" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(#noise)"/></svg>');
-            opacity: 0.1;
-            z-index: -1;
-            animation: glitch-bg 0.5s infinite alternate;
-        }
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100 100"><filter id="noise"><feTurbulence type="fractalNoise" baseFrequency="0.8" numOctaves="3" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(#noise)"/></svg>');
+      opacity: 0.1;
+      z-index: -1;
+      animation: glitch-bg 0.5s infinite alternate;
+    }
 
-        @keyframes glitch-bg {
-            0% { transform: translateX(0); }
-            50% { transform: translateX(1px); }
-            100% { transform: translateX(-1px); }
-        }
+    @keyframes glitch-bg {
+      0% {
+        transform: translateX(0);
+      }
+      50% {
+        transform: translateX(1px);
+      }
+      100% {
+        transform: translateX(-1px);
+      }
+    }
 
-        h1, h2, p, audio {
-            margin-bottom: 10px;
-        }
+    h1,
+    h2,
+    p,
+    audio {
+      margin-bottom: 10px;
+    }
 
-        .imagen {
-            width: 100%;
-            max-width: 500px;
-            display: block;
-            margin: 10px 0;
-        }
+    .imagen {
+      width: 100%;
+      max-width: 500px;
+      display: block;
+      margin: 10px 0;
+    }
 
-        .ascii-container {
-            margin-top: 20px;
-        }
+    .ascii-container {
+      margin-top: 20px;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+    }
 
-        .ascii-art {
-            white-space: pre-wrap; /* Permite saltos de línea automáticos */
-            font-size: 10px;
-            line-height: 1.1;
-            overflow-x: auto;
-            background: rgba(255,255,255,0.03);
-            padding: 10px;
-            margin-bottom: 20px;
-            border-left: 2px solid #444;
-        }
+    .ascii-art {
+      white-space: pre;
+      font-size: 10px;
+      line-height: 1.1;
+      overflow-x: auto;
+      background: rgba(255, 255, 255, 0.03);
+      padding: 10px;
+      margin-bottom: 20px;
+      border-left: 2px solid #444;
+    }
 
-        @media screen and (max-width: 768px) {
-            .ascii-art {
-                font-size: 8px;
-            }
-        }
-    </style>
+    @media screen and (max-width: 768px) {
+      .ascii-art {
+        font-size: 8px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <h1>d&fnof;</h1>
-    <p>...somos dean funes y hacemos música</p>
-    
-    <img src="Logo glitch.gif" alt="Descripción de la imagen" class="imagen">
-    
-    <h2>demo ƒ</h2>
+  <h1>d&fnof;</h1>
+  <p>...somos dean funes y hacemos música</p>
 
-    <audio controls>
-        <source src="satiro con tek.ogg" type="audio/ogg">
-        Tu navegador no soporta el audio HTML5.
-    </audio>
+  <img src="Logo glitch.gif" alt="Descripción de la imagen" class="imagen" />
 
-    <div class="ascii-container">
-        <!-- Ilustración ASCII 1 -->
-        <pre class="ascii-art">
-        @%@@%%%@@@%%%@@%%%%@@%%%%@@%%%@@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%%#%%%*+#%%*+**%%***#%#++*%%#++#%%+**%%**#%%###%%%%%%%%%%%%#%-.-##:.-+*:.:+#-..=*=..:+=...=+...-+:..-=-...-....:...............:....=-..=%+..%@%-*%@%#%%%%%%%%%%%%##%%%%%%%%%@@@+.%@@@@:.#%@@@@%==+*+=**#%%%%%%@@@@@@@@@@+.:+++%@@@@@@@@@@@@@@@@@%@%@@@%%@%@@@@@@@@@@@@@@-.............................................
+  <h2>demo ƒ</h2>
+
+  <audio controls>
+    <source src="satiro con tek.ogg" type="audio/ogg" />
+    Tu navegador no soporta el audio HTML5.
+  </audio>
+
+  <div class="ascii-container">
+    <!-- Ilustración ASCII 1 -->
+    <pre class="ascii-art">
+@%@@%%%@@@%%%@@%%%%@@%%%%@@%%%@@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%%#%%%*+#%%*+**%%***#%#++*%%#++#%%+**%%**#%%###%%%%%%%%%%%%#%-.-##:.-+*:.:+#-..=*=..:+=...=+...-+:..-=-...-....:...............:....=-..=%+..%@%-*%@%#%%%%%%%%%%%%##%%%%%%%%%@@@+.%@@@@:.#%@@@@%==+*+=**#%%%%%%@@@@@@@@@@+.:+++%@@@@@@@@@@@@@@@@@%@%@@@%%@%@@@@@@@@@@@@@@-.............................................
 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%%%%@%*#%%%##%@@%##@@%##@@@%#%@@%##%@@###@@%%#%@@##%@@%#%@@@%%%@@@@@@@@@@@@@+=#@%++#@%+=*@%+=*%@*=+%@*=+#@#==#%#=+*%#=+*#=+=+##==+%@=+#@@=*@@@#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*+@@%%####@@@#*++-=@@@@@@@@@@@@@@@@@@%**+=:.-=%@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@:...-:.........................................
 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%%%@%%#%%%%#*%@@%#%@@%##@@@##@@@%%%@@##%@@%##@@%%%#@@%*#@@%##@@@##%@@%%%@@%@%%@@@@%@@@@@@@@==@@+-+@@+=*@@*=+%@#++%@#=+#@#==*@%==#@%++@@#*#@@@%@@@@@@@@%@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%###%%##++-+=-=+==-=-......-@@@@@@#--:.......-=-==#%@#-@%#=-=-%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@-...:..........................................
 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%%%@%#%%@%%%%@@%%%%@@%#%@@@%#@@@##@@@%#%@@@##@@%%%@@%##@@%%#%@@%%%@@%##@@@%#@@@%%%@@%%%@@%%%@@@@@%@@@%@@@@=#@@++%@@+=%@@+=#@@++@@@*%@@@@@@@@@@@@@@@@@@@@@@%@@@@@@%@@@@@@@@@@@@@@@@@@@@@@%%@%%%%#####*+.......:.........................@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@-...:++......................................-.
@@ -237,11 +248,11 @@
 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%####%++#:#%@@@@@@@@@@@@@@@@@@@@@@@@@@%@@@@@@@@@@@@@@@@@@@@@@@@@@-##%@@@@@@@@@@@@@@@@@@@@%@@@@@@@%%%@##%%#%%%%##%#=-==:::..-@@..@@@.@@@@@@@@@@@@@@@@@%@@@@@@@#-@#@@@@@#%@@@@@@@@@@@@@=-@#*+=@@%@@@@@@@@@@@@@@@@%%%*%@@=---::=%+*#@@@@#+++%@@@%++++*#@%#%%@@%@@+*%++@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@+@@@@@@@@@@@@@@@@@@@@@@@@@@@%@@@@@@@@@@@@@@@@@@@@@@%@@@@+##%%@@@%@@@@@@%@@@@@@%%%%%%%#%%%@@@@%#%%%%##%#-==:-::..%@@+..@@@..@@@@@@@@@@@@@@@@@@@@@@@@%:@%*@@@@@%-@@@@@@@@@@@@@@@#++=%@%%@@@@@@@@@@@@@@%%*#*@@@%%%*==##-.--.=@@@@@@@@@@==++##@@@@@@@@@%++%*+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%%#%%@%%==+++*##%%#%%%@@#+====--=***###%%%%*#@@@#==++........=++==...@@@@@=#%@@@@@@@@@@@%*@@@@@@@@@.*@=@@@@@@@%@@@@@@@@@@@%%#=--.=@%%@@@@@@@@@@@@@%+==--@*......++...*#++:-=.....-@%-:.-=%@%%%%%%@@=-=+-@@@@@@@@@@@@@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@
-        </pre>
+    </pre>
 
-        <!-- Ilustración ASCII 2 -->
-        <pre class="ascii-art">
-        ............................................................................................................................................................................................................................................................-..........................................................................................................%...........................@............
+    <!-- Ilustración ASCII 2 -->
+    <pre class="ascii-art">
+............................................................................................................................................................................................................................................................-..........................................................................................................%...........................@............
 ..............................................................................................................................................................................................................................*@@@@@@@@@@@@@@@@@+.......................................-#%@#+:...................................................................*#.##........:.......@=..........@............
 ....................................................................................................................................................................................................................................................................................=%@@@@@@@@@@@@@@@%#:............................................................@.+@.............@@............@............
 ..............................................................................................................................................................................................................................................................................-#@@@@@@%##*++=+++###%%%##%@%=.......................................................@......=@@@@@@@@+...............@............
@@ -387,11 +398,11 @@
 #%@@@@%%@@%%%@@@@@%%%%%%%@@@@@@@@@%%%%%%%@@%%%@@%@@%%@%%@@@@@@@@+@%..-%%%@@#######%%@@@@@@@@@%%%@@@%@%%%####%%%%@%@@@##=---=#@@@%=--==..==++*#**##****##*##*#*##*##***#######***#*###********++*#@@%#%#@%########################%%#%#%%%%%%%@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%@%%%%%%%%%%%%%@@%%@@%@@@@@@@@@@@@@@@@@@@@@........=-.............-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 %@@@@@@@@@@@@@@@@%%@%%%%%%%@@@@@@@@@@@@@@@%%%%@@@%%@%%%@@@+..%..%%.@@@@%@@@%#####%%%@@@%%@@@@%%%%@#*@@@@@@@@@@@%+.......:=+#%@@@@@@@@@%@@@@@%#*******#***#**##*****##***##****#****#**##***#*###%%@@#######*#####*##############%#%#%#%%%%@%%@@@@@@@@@@@@@@@@@@@@@%%%%%%%%%%@%%%%%%%%%@%%@%%%@%@@@@@@@@@@@@@@@@@@@@@:......=:-..........:...:@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 #%%%%%%%%%%%%%@@%%%%%#%###%%%%%%%%%%%%%%%%%%%**##%%%%##%@@@..+@@@#..-@%###+++++*###%#*++*#@@%%%%##+#%#*==-:.......-=#%@%%@%%%%%%@@@@@@@@@@@@@#==-------------------:---------------------=========--===------==-=---========+=++++****######%%%@@@@@@@@@@@@@@@@@@%#####*#############%##%%%%%%%%%%%%%%%%@@@@@@@@@@=..........................@%@@@@@@@@@%%%%%%%%@@%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%%%#
-        </pre>
+    </pre>
 
-        <!-- Ilustración ASCII 3 -->
-        <pre class="ascii-art">
-        *+@*.-.:::.@@@%#@%#****+@@@@@@...@....@%-.....=...+@=.+-=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%*%#***##########+####**+*****@.........................................................@........@@@....+@@@@@@@@#...:@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%%%%#######%@....#==---:.............................................%@....................+-#@%+===--=.........................................::..
+    <!-- Ilustración ASCII 3 -->
+    <pre class="ascii-art">
+*+@*.-.:::.@@@%#@%#****+@@@@@@...@....@%-.....=...+@=.+-=@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%*%#***##########+####**+*****@.........................................................@........@@@....+@@@@@@@@#...:@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%%%%#######%@....#==---:.............................................%@....................+-#@%+===--=.........................................::..
 .+@#+#+*#+.@@@@%%#@@%#%+@@@@@@.-.@...@@@@@%=..%+@..#+:.@@@....@........@@@.#@...=@.-.@@@@%@@@@@@@@@@@@@##%%##%%%%%#%#%@@@@@@@@@@@@@@@....................:...................................:@-.......@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@...+@@@@@@@@@@@@@@@@@@@@@@@@@@@@%=.....................@..................-##...-*=+*##+#%:=====--=++=*-=====-++==+*#=++*#+#*+*++**+*#-
 .#@%++++*#.@@@%%@%@@%#%*@@@@@@...@...@@@@@=@@@@--%@@=.+@@@....@...=.....@.......+@...@@@@#...@...@@...@@@@@@@@@%@@@@@#+-...........-@.-:=--===++++#*#++++++==--.:.::.-:......................#@........@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@...+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@+=@..................=.@...-+***###+=#.=-==-=+=====-=++==-===+=++-+++++**++=+**%+*=
 .#@#++++*=-@@@%%%%%%###*@@@@@@...@.-.@@@@@.+-@@+*+@=--=@@@..-.@#..--...@@..-@.-.%@...@@@@@...@...#@@.:.@@@@@@*##@@+##@@@@@@@=............................................--..:-..............@@.......#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%...-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@..-..+...=.#*##%++*%:==--===+==+========++++*++++#+*++++++++=+*#-
@@ -537,11 +548,11 @@
 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@...........@@@@@@@@@...........+.@..@....@...@@..@%..--...@=.................................+...-=..+.-@@@@@@@@@@@@@@@@@@@@@@@@@@%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@+%@@%%%@%%%%%%%#%#%#%%@%%%#**@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@............................................................@.@@@@-.@@@@=%@*:+
 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@...........:@@@@@@.............@@.+#..@=.%@...+..+...=@..@+...@....-..........................-...%...:.@@@@@@@@@@@@@@@@@@@@@@@%%#%%%#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%@%@@@@%@%%%@@@@@@%%@%%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%=.............................................-..............@@@@@@-..+@@@@@@@
 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@..............@=.................:..#..@............-........:..........................................@@@@@@@@@@@@@@@@+#@@@@##%%%%%@@@@-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%@.+###++****###**######*####*%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@............................................................@@@@@@@@@@@@@@@@
-        </pre>
+    </pre>
 
-        <!-- Ilustración ASCII 4 -->
-        <pre class="ascii-art">
-        #############################################****************************************************************************************************************+**+*****++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++******###*****+++++++++++++++++++++++++++++++++++++++***++++++++++++++++===++**#***%%%#*++==++*##*+++========++========++++++++=++===+++++++++++++++++++++++++++++++++++++++++
+    <!-- Ilustración ASCII 4 -->
+    <pre class="ascii-art">
+#############################################****************************************************************************************************************+**+*****++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++******###*****+++++++++++++++++++++++++++++++++++++++***++++++++++++++++===++**#***%%%#*++==++*##*+++========++========++++++++=++===+++++++++++++++++++++++++++++++++++++++++
 ##########################################**#**##*****##**#**************************************************************************************************+**++*****++*+++++++++++++++++++++++++++++++++++++++++++++++++++****####*****+++++++++++++++++++++++++++++++++++=+=======++***+++==++==+==========+*****%%%%%*+=+=++*##*+=============++============++========+==++++++++++++++++++++++++++++++++++
 #############################################*###***#*****##**********#**************************************************************************************+**+*+****++++++++++++++++++++++++++++++++++++++++++++++++++***####*****++++++++++++++++++++++++++++++++++++=++++=+++++===+*#**++++++==+==++==+==++****#%%%%%#*+===++*#**+=========+====================+==+=====+=======++++++++++++++++++++++++++
 ################################################*#*##*************########**********************************************************************************++*++*****++++++++++++++++++++++++++++++++++++++++++++++++***####**+++++++++++++++++++++++++++++++++++=====+===+==+===+====++*##*++==++=++=+======++*****%%###%#*+===++*#*++=====================================+=====+===+++++++++++++++++++++++++
@@ -687,8 +698,7 @@
 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%@@@@@@@@@@@@@@%@@@@@@@@@@@@@@@@@%##%%%%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%%#********#%%@@%%****%@@%*=======*#*++*#%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@#***%%#%%@@@@@@%%%%%@@@@@@
 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%*==%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%%%%%%%%@@@@@@@%##%@@#+=======*##*#%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%***#%%%%%@@@@@@%%%%%@@@@@@
 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%+%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%%%@@@@@@@@@@@@@%#+=======*%%%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%***#%%#%%@@@@@@%%%%@@@@@@@
-        </pre>
-    </div>
-
+    </pre>
+  </div>
 </body>
 </html>
