--- a/index.html
+++ b/index.html
@@ -4,70 +4,77 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>&fnof; &fnof; &fnof;</title>
-
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+   * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-    body {
-      background: black;
-      color: white;
-      text-align: left;
-      font-family: monospace, Courier, sans-serif;
-      padding: 20px;
-      position: relative;
-      overflow-y: auto; /* Asegura scroll vertical */
-    }
+body {
+  background: white;
+  color: black;
+  text-align: left;
+  font-family: monospace, Courier, sans-serif;
+  padding: 20px;
+  overflow-y: auto;
+}
 
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100 100"><filter id="noise"><feTurbulence type="fractalNoise" baseFrequency="0.8" numOctaves="3" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(#noise)"/></svg>');
-      opacity: 0.1;
-      z-index: -1;
-      animation: glitch-bg 0.5s infinite alternate;
-    }
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100 100"><filter id="noise"><feTurbulence type="fractalNoise" baseFrequency="0.8" numOctaves="3" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(#noise)"/></svg>');
+  opacity: 0.05;
+  z-index: -1;
+  animation: glitch-bg 0.5s infinite alternate;
+}
 
-    @keyframes glitch-bg {
-      0% { transform: translateX(0); }
-      50% { transform: translateX(1px); }
-      100% { transform: translateX(-1px); }
-    }
+@keyframes glitch-bg {
+  0% { transform: translateX(0); }
+  50% { transform: translateX(1px); }
+  100% { transform: translateX(-1px); }
+}
 
-    h1, h2, p, audio {
-      margin-bottom: 10px;
-    }
+h1, h2, p, audio {
+  margin-bottom: 10px;
+}
 
-    .imagen {
-      width: 100%;
-      max-width: 500px;
-      display: block;
-      margin: 10px 0;
-    }
+.imagen {
+  width: 100%;
+  max-width: 500px;
+  display: block;
+  margin: 10px 0;
+}
 
-    .ascii-container {
-      margin-top: 20px;
-    }
+.ascii-container {
+  margin-top: 20px;
+  overflow-x: auto;
+  max-width: 100%;
+}
 
-    .ascii-art {
-      white-space: pre-wrap;   /* Ajusta líneas al ancho disponible */
-      font-family: monospace;
-      font-size: 8px;          /* Tamaño reducido para evitar scroll horizontal */
-      line-height: 1.05;
-      margin-bottom: 20px;
-      background: none;
-      border: none;
-      padding: 0;
-      max-width: 100%;
-      overflow: visible;
-    }
+.ascii-art {
+  white-space: pre;
+  font-family: monospace;
+  font-size: 5px;
+  line-height: 1;
+  margin-bottom: 20px;
+  background: none;
+  border: none;
+  padding: 0;
+  display: block;
+  max-width: 100%;
+}
+
+@media (max-width: 768px) {
+  .ascii-art {
+    font-size: 3.5px;
+    line-height: 0.8;
+  }
+}
   </style>
 </head>
 <body>
