--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 }
 
 body {
-  background: white;
-  color: black;
+  background: black;
+  color: white;
   text-align: left;
   font-family: monospace, Courier, sans-serif;
   padding: 20px;
@@ -28,7 +28,7 @@ body::before {
   width: 100%;
   height: 100%;
   background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100 100"><filter id="noise"><feTurbulence type="fractalNoise" baseFrequency="0.8" numOctaves="3" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(#noise)"/></svg>');
-  opacity: 0.05;
+  opacity: 0.1;
   z-index: -1;
   animation: glitch-bg 0.5s infinite alternate;
 }
@@ -62,11 +62,13 @@ h1, h2, p, audio {
   font-size: 5px;
   line-height: 1;
   margin-bottom: 20px;
-  background: none;
+  background: white;
+  color: black;
   border: none;
-  padding: 0;
+  padding: 10px;
   display: block;
   max-width: 100%;
+  overflow-x: auto;
 }
 
 @media (max-width: 768px) {
