--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>&fnof; &fnof; &fnof;</title>
   <style>
-   * {
+  * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html, body {
+  width: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -59,8 +64,8 @@ h1, h2, p, audio {
 .ascii-art {
   white-space: pre;
   font-family: monospace;
-  font-size: 5px;
-  line-height: 1;
+  font-size: 4px;
+  line-height: 0.9;
   margin-bottom: 20px;
   background: white;
   color: black;
@@ -73,8 +78,8 @@ h1, h2, p, audio {
 
 @media (max-width: 768px) {
   .ascii-art {
-    font-size: 3.5px;
-    line-height: 0.8;
+    font-size: 2.5px;
+    line-height: 0.7;
   }
 }
   </style>
