--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
   <!-- Imágenes en lugar de ASCII -->
   <img src="ilustracion1.png" alt="Ilustración 1" class="imagen" />
-  <img src="ilustracion2.jpg" alt="Ilustración 2" class="imagen" />
-  <img src="ilustracion3.jpg" alt="Ilustración 2" class="imagen" />
-  <img src="ilustracion4.jpg" alt="Ilustración 2" class="imagen" />
+  <img src="ilustracion2.png" alt="Ilustración 2" class="imagen" />
+  <img src="ilustracion3.png" alt="Ilustración 2" class="imagen" />
+  <img src="ilustracion4.png" alt="Ilustración 2" class="imagen" />
 </body>
 </html>
