--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
     }
 
     .glitch-line {
-      font-family: monospace;
-      color: #ffffff;
-      font-size: 2.5em;
-      white-space: pre;
-      letter-spacing: 1.5px;
-    }
+  font-family: monospace, Courier, sans-serif;
+  color: #ffffff;
+  font-size: 1.5em;
+  white-space: pre;
+  letter-spacing: 1.5px;
+}
   </style>
 </head>
 <body>
