--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
@@ -56,16 +56,52 @@
     }
 
     .glitch-line {
-  font-family: monospace, Courier, sans-serif;
-  color: #ffffff;
-  font-size: 0.8em;
-  white-space: pre;
-  letter-spacing: 1.2px;
-}
+      font-family: monospace, Courier, sans-serif;
+      color: #ffffff;
+      font-size: 0.8em;
+      white-space: pre;
+      letter-spacing: 1.2px;
+    }
+
+    /* Cuadrícula de imágenes */
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 10px;
+      margin-top: 20px;
+    }
+
+    .grid .cell {
+      width: 100%;
+      aspect-ratio: 1 / 1;
+      background-color: transparent;
+      border: 1px solid #444;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .grid .cell img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+
+    @media (max-width: 768px) {
+      .grid {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+
+    @media (max-width: 480px) {
+      .grid {
+        grid-template-columns: repeat(1, 1fr);
+      }
+    }
   </style>
 </head>
 <body>
- 
   <p class="glitch-line" data-text="somos deanƒunes y hacemos música"></p>
 
   <img src="Logo glitch.gif" alt="Logo" class="imagen" />
@@ -77,10 +113,18 @@
     Tu navegador no soporta el audio HTML5.
   </audio>
 
-  <img src="ilustracion1.png" alt="Ilustración 1" class="imagen" />
-  <img src="ilustracion2.png" alt="Ilustración 2" class="imagen" />
-  <img src="ilustracion3.png" alt="Ilustración 3" class="imagen" />
-  <img src="ilustracion4.png" alt="Ilustración 4" class="imagen" />
+  <!-- Cuadrícula de imágenes 3x3 -->
+  <div class="grid">
+    <div class="cell"><img src="ilustracion1.png" alt="Ilustración 1" /></div>
+    <div class="cell"><img src="ilustracion2.png" alt="Ilustración 2" /></div>
+    <div class="cell"><img src="ilustracion3.png" alt="Ilustración 3" /></div>
+    <div class="cell"><img src="ilustracion4.png" alt="Ilustración 4" /></div>
+    <div class="cell"><!-- vacío --></div>
+    <div class="cell"><!-- vacío --></div>
+    <div class="cell"><!-- vacío --></div>
+    <div class="cell"><!-- vacío --></div>
+    <div class="cell"><!-- vacío --></div>
+  </div>
 
   <script>
     function fullCharsetDecodeWithMovingSides(element, finalText, duration = 3000, stepTime = 50, sideChars = 3) {
