--- a/index.html
+++ b/index.html
@@ -48,22 +48,30 @@
       margin-bottom: 10px;
     }
 
-    .imagen {
-      width: 100%;
-      max-width: 500px;
-      display: block;
-      margin: 10px 0;
-    }
-
     .glitch-line {
       font-family: monospace, Courier, sans-serif;
       color: #ffffff;
-      font-size: 0.8em;
+      font-size: 4em; /* Aumentado x5 */
       white-space: pre;
       letter-spacing: 1.2px;
     }
 
-    /* Cuadrícula de imágenes */
+    /* Contenedor texto + gif */
+    .header-container {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      flex-wrap: wrap;
+      margin-bottom: 20px;
+    }
+
+    .header-container img {
+      max-width: 166px; /* 1/3 del tamaño anterior */
+      height: auto;
+      flex-shrink: 0;
+    }
+
+    /* Cuadrícula de imágenes 3x3 */
     .grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -84,7 +92,7 @@
     .grid .cell img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain; /* ahora ajusta al cuadrado, sin recortar */
       display: block;
     }
 
@@ -92,19 +100,35 @@
       .grid {
         grid-template-columns: repeat(2, 1fr);
       }
+
+      .glitch-line {
+        font-size: 3em;
+      }
+
+      .header-container {
+        flex-direction: column;
+        align-items: flex-start;
+      }
     }
 
     @media (max-width: 480px) {
       .grid {
         grid-template-columns: repeat(1, 1fr);
       }
+
+      .glitch-line {
+        font-size: 2.5em;
+      }
     }
   </style>
 </head>
 <body>
-  <p class="glitch-line" data-text="somos deanƒunes y hacemos música"></p>
 
-  <img src="Logo glitch.gif" alt="Logo" class="imagen" />
+  <!-- Texto + GIF -->
+  <div class="header-container">
+    <img src="Logo glitch.gif" alt="Logo" />
+    <p class="glitch-line" data-text="somos deanƒunes y hacemos música"></p>
+  </div>
 
   <h2 class="glitch-line" data-text="demo ƒ"></h2>
 
