--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     .glitch-line {
       font-family: monospace, Courier, sans-serif;
       color: #ffffff;
-      font-size: 2em; /* Aumentado x5 */
+      font-size: 1.5em; /* Aumentado x5 */
       white-space: pre;
       letter-spacing: 1.2px;
     }
@@ -127,7 +127,7 @@
   <!-- Texto + GIF -->
   <div class="header-container">
     <img src="Logo glitch.gif" alt="Logo" />
-    <p class="glitch-line" data-text="somos deanƒunes y hacemos música"></p>
+    <p class="glitch-line" data-text="deanƒunes"></p>
   </div>
 
   <h2 class="glitch-line" data-text="demo ƒ"></h2>
