--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <!-- Texto + GIF -->
   <div class="header-container">
     <img src="Logo glitch.gif" alt="Logo" />
-    <p class="glitch-line" data-text="deanƒunes"></p>
+    <p class="glitch-line" data-text="deanƒunes hace música"></p>
   </div>
 
   <h2 class="glitch-line" data-text="demo ƒ"></h2>
